bug fixes and Author models